Fix split pane overflow issue (#64)

--- a/src/UserInterface/styles/scss/index.scss
+++ b/src/UserInterface/styles/scss/index.scss
@@ -43,7 +43,6 @@ body {
   align-items: center;
   justify-content: center;
   height: 100%;
-  width: 100%;
 }
 
 .right-panel canvas {
